# wishlist

./: .dockerignore  .example.env  .gitignore  Dockerfile  README.rst  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_wishlist.py
wishlist/: app.py  auth.py  commands.py  exc.py  models.py  orm.py  queries.py  repository.py  uow.py
